# MSA_GENERATION

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
msaflow/: __init__.py
msaflow/configs/: accelerate_4gpu.yaml  decoder.yaml  decoder_overfit.yaml  latent_fm.yaml
msaflow/data/: __init__.py  dataset.py  preprocessing.py
msaflow/inference/: fold_benchmark.py  generate.py  quality_eval.py
msaflow/models/: __init__.py  latent_fm.py  sfm_decoder.py
msaflow/training/: train_decoder.py  train_latent_fm.py
msaflow/utils/: __init__.py  spherical.py
scripts/: analyze_benchmark.py  check_a3m_lengths.py  compare_msa_quality.py  compute_foldbench_neff.py  fold_benchmark.sh  fold_benchmark_all.sh  fold_benchmark_colabfold.sh  fold_benchmark_fewshot.sh  fold_benchmark_yjlee4_latest.sh  generate_msa.sh  preprocess.sh  pretrim_a3m.py  train_decoder.sh  train_latent_fm.sh
