[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msaflow"
version = "0.1.0"
description = "MSA generation via flow matching in latent space"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "accelerate>=0.30",
    "omegaconf>=2.3",
    "lmdb>=1.4",
    "tqdm>=4.66",
    "ml-collections>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["msaflow*"]

[tool.black]
line-length = 99
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
